[package]
name = "mixin"
version = "0.2.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/DenisKolodin/mixin"
homepage = "https://github.com/DenisKolodin/mixin"
documentation = "https://docs.rs/mixin/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["macros", "struct", "field"]
categories = ["development-tools"]
description = "mixin macros"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.28"
once_cell = "1.3.1"
proc-macro-hack = "0.5.15"
proc-macro2 = "1.0.10"
quote = "1.0.3"
syn = "1.0.18"
thiserror = "1.0.16"
